phone click no longer overlaps

--- a/src/home/HomeMobileA.module.css
+++ b/src/home/HomeMobileA.module.css
@@ -471,7 +471,7 @@ p {
   align-content: top;
   align-self: top;
   margin: 0em 0em 0em 0em;
-  padding: 5em 0em 0em 0em;
+  padding: 2em 0em 0em 0em;
 }
 
 .locationtext{
@@ -488,14 +488,14 @@ p {
   align-items: top;
   align-content: top;
   align-self: top;
-  margin: 0em 0em  0em 0em;
+  margin: 0em 0em 0em 0em;
 }
 
 .locationcontainer {
   display: grid;
   grid-template-columns: 1fr; 
   /* height: 10vh; */
-  margin: 0em 0em 5vh 0em;
+  margin: 0em 0em 0em 0em;
 }
 
 .locationtextcontainer{
@@ -503,7 +503,7 @@ p {
   align-items: top;
   align-content: top;
   align-self: top;
-  margin: 5em 0em 0em 0em;
+  margin: 2em 0em 4em 0em;
 }
 
 
@@ -623,7 +623,6 @@ p {
 
 .socialcontent {
   display: grid;
-  height: 10vh;
 }
 
 .socialmedia{
